--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,12 @@
 @import 'tailwindcss';
 
 @layer base {
+  html,
+  body,
+  #root {
+    height: 100%;
+  }
+
   html {
     font-size: 100%;
   }
