chore: yellow 컬러 팔레트 수정

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -29,17 +29,17 @@
     --color-pink-950: #4c050f;
 
     /* yellow */
-    --color-yellow-50: #fefde8;
-    --color-yellow-100: #fefbc3;
-    --color-yellow-200: #fef48a;
-    --color-yellow-300: #fde747;
-    --color-yellow-400: #fad515;
-    --color-yellow-500: #eabc08;
-    --color-yellow-600: #ca9204;
-    --color-yellow-700: #a16807;
-    --color-yellow-800: #85520e;
-    --color-yellow-900: #714312;
-    --color-yellow-950: #422206;
+    --color-yellow-50: #fefbec;
+    --color-yellow-100: #fbf3ca;
+    --color-yellow-200: #f6e27f;
+    --color-yellow-300: #f3d356;
+    --color-yellow-400: #f0c02f;
+    --color-yellow-500: #e9a217;
+    --color-yellow-600: #ce7c11;
+    --color-yellow-700: #ab5912;
+    --color-yellow-800: #8b4615;
+    --color-yellow-900: #733914;
+    --color-yellow-950: #421d06;
 
     /* green */
     --color-green-50: #f2fbf2;
