--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,13 @@
 @import 'tailwindcss';
 
+@font-face {
+  font-family: 'Ownglyph_ParkDaHyun';
+  src: url('https://fastly.jsdelivr.net/gh/projectnoonnu/2411-3@1.0/Ownglyph_ParkDaHyun.woff2')
+    format('woff2');
+  font-weight: normal;
+  font-style: normal;
+}
+
 @layer base {
   html,
   body,
@@ -9,6 +17,7 @@
 
   html {
     font-size: 100%;
+    --font-sans: 'font', Ownglyph_ParkDaHyun;
   }
 
   body {
